--- a/src/Components/info/info.module.scss
+++ b/src/Components/info/info.module.scss
@@ -9,6 +9,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        overflow: auto;
         .head {
             font-size: xx-large;
             font-weight: bold;
