--- a/src/Components/NavHome/navbar.module.scss
+++ b/src/Components/NavHome/navbar.module.scss
@@ -5,7 +5,7 @@
     font-size: 30px;
     padding: 0 50px ;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     color: rgb(79, 79, 79);
     align-items: center;
     box-shadow: 0px 5px 20px gray;
